SUBDIRS = src

#AUTOMAKE_OPTIONS = 1.4 foreign
#MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.h.in configure depcomp install-sh missing
#AM_CPPFLAGS = -I$(top_srcdir)
#bin_PROGRAMS = server client
#server_SOURCES = src/server/main.c
#server_LDADD = @ELEMENTARY_LIBS@
#server_CFLAGS = @ELEMENTARY_CFLAGS@


#client_SOURCES = src/client/main.c src/client/main.h
#client_LDADD = @ELEMENTARY_LIBS@
#client_CFLAGS = @ELEMENTARY_CFLAGS@
